// Original file: proto/auth.proto


export interface Device {
  'id'?: (string);
  'deviceId'?: (string);
  'deviceName'?: (string);
  'lastUsedAt'?: (string);
  'createdAt'?: (string);
}

export interface Device__Output {
  'id': (string);
  'deviceId': (string);
  'deviceName': (string);
  'lastUsedAt': (string);
  'createdAt': (string);
}
